# Lila

./: .env  .env_example  .gitignore  AGENTS.md  MANIFEST.in  README.md  app.py  index.html  main.py  pyproject.toml  requeriments.txt  sitemap.xml  vite.config.js
admin/: create_admin.py
admin/templates/: dashboard.html  login.html  model_table.html
app/: config.py  connections.py
app/cache/: prerender.py
app/helpers/: env.py  files.py  helpers.py  security.py  session.py  translate.py  validate.py
app/locales/: changelogs.json  translations.json
app/middlewares/: default.py  defaults.py  middlewares.py  security.py
app/models/: auth.py  user.py
app/routes/: admin.py  api.py  auth.py  authenticated.py  routes.py
assets/: index-BGYp8JPH.css  index-D5oTlJQx.js  index-DH-9NZKE.js
cli/: auth.py  create_admin.py  create_panel_admin.py  lila-auth.py  migrations.py  minify.py  model.py  prerender.py  react.py  scaffold.py  scaffold_crud.py  secret_key.py  seo.py
cli/auth/models/: auth.py  user.py
cli/auth/routes/: auth.py  authenticated.py
cli/auth/templates/: authenticated.html  change-password.html  change_password.html  dashboard.html  forgot-password.html  invalid-token.html  login.html  profile.html  register.html
core/: admin.py  app.py  auth.py  base_model.py  cache.py  config.py  controller.py  database.py  debug.py  env.py  files.py  helpers.py  logger.py  middleware.py  request.py  responses.py  routing.py  security.py  session.py  templates.py  translate.py  translate_defaults.py  utils.py
css/: lila.css
database/: connections.py  migrations.py
doc/: swagger.py
docs/: admin.html  atom-one-dark.min.cssZone.Identifier  auth.html  cache.html  cli.html  configuration.html  connections.html  database_async.md  debug.html  documentation.html  highlight.min.jsZone.Identifier  index.css  index.html  index.js  install.html  locales.html  logger.html  markdown.html  middlewares.html  migrations.html  minify.html  models.html  pico.min.cssZone.Identifier  production.html  react.html  rest_api.html  robots.txt  routes.html  scaffold.html  seo.html  session.html  sitemap.xml  static.html  templates.html  upload.html
docs/css/: doc.css  index.css  lila.css  pico.min.css
docs/docs/: cache.html  cli.html  connections.html  debug.html  documentation.html  install.html  logger.html  middlewares.html  migrations.html  minify.html  models.html  production.html  rest_api.html  routes.html  scaffold.html  seo.html  session.html  static.html  templates.html  websocket.html
docs/docs/partials/: aside.html
docs/esp/: documentation.html  index.html
docs/js/: anime.js  index.js  lila.js
docs/partials/: aside.html
js/: anime.js  lila.js  partial.js
lila/: .env_example  .gitignore  AGENTS.md  docker-compose.yml  main.py  package.json  vite.config.js
lila/app/: config.py  config_cache.py  connections.py
lila/app/routes/: admin.py  api.py  routes.py
lila/cli/: __init__.py  auth.py  create_admin.py  create_panel_admin.py  dev.py  docker.py  migrations.py  model.py  optimize.py  scaffold.py  scaffold_crud.py  secret_key.py  seo.py  worker.py
lila/core/: __init__.py  admin.py  app.py  auth.py  background.py  base_model.py  cache.py  config.py  controller.py  csrf.py  database.py  debug.py  exporter.py  files.py  mailer.py  middleware.py  oauth.py  responses.py  routing.py  security.py  session.py  templates.py  translate.py  translate_defaults.py  two_factor.py  websocket.py
lila/docker/: .dockerignore  Dockerfile  nginx.conf  start.sh  stop.sh
lila/public/js/: utils.js  ws.js
lila/resources/html/: index.html  index.jinja
lila/resources/js/: spa.js
lila/resources/markdown/: layout.html
locales/: authenticated.json  guest.json  translations.json
middlewares/: middlewares.py
models/: user.py
public/css/: lila.css  lila.min.css  tailwind.css
public/js/: spa.js  utils.js
resources/css/: tailwind.css
resources/html/: index.html
resources/html/admin/: dashboard.html  login.html  model_table.html
resources/html/lila/: 404.html  base.html  debug.html
resources/js/: main.jsx  spa.js  utils.js
resources/js/pages/: Counter.jsx
resources/markdown/: changelogs.md  layout.html
resources/templates/html/: index.html
resources/templates/markdown/: changelogs.md  example.md  layout.html
routes/: api.py  routes.py
security/: sensitive_paths.json
static/css/: app.css  black.css  blue.css  emerald.css  green.css  indigo.css  lila.css  material.css  pico.css  pico.min.css  pink.css  red.css  violet.css  yellow.css
static/js/: dashboard.js  lila.js  login.js  material.js  modal.js  register.js  theme.js  utils.js  utils_example.js
templates/: 404.html  index.html  login.html
templates/auth/: dashboard.html
templates/auth/includes/: head.html
templates/html/: 404.html  auth.html  dashboard.html  index.html  reactive.html
templates/html/admin/: dashboard.html  login.html  model_table.html
templates/html/auth/: auth.html  footer.html  login.html  register.html
templates/html/includes/: footer.html  head.html
templates/html/lila/: 404.html  (+1 more)
templates/markdown/: README.md  changelogs.md  example.md  layout.html  test.md
(+49 files in other folders)
